manifestfiles/javawebappdepnodeport.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javawebappdeployment
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: javawebapp
  strategy:
    type: RollingUpdate
    rollingUpdate:  
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 30
  template:
    metadata:
      name: javawebapppod
      labels:
        app: javawebapp
    spec: 
      containers:
      - name: javawebappcontainer
        image: badri/java-web-app
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata: 
  name: javawebappsvc
spec:
  type: NodePort
  selector: 
    app: javawebapp
  ports:
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 30031
