manifestfiles/javawebappnodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: javawebappsvc
  labels:
    name: javawebapp 
spec:
  type: NodePort
  selector:
    name: javawebapp
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30031
