manifestfiles/springappclusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: springbootsvc
  labels:
    name: springboot  
spec:
  type: ClusterIP
  selector:
    name: springboot
  ports:
    - port: 80
      name: http
      targetPort: 8080
