manifestfiles/springappdepnodeport.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springappdeployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot
  strategy:
    type: RollingUpdate
    rollingUpdate:  
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 30
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
      - name: springbootcontainer
        image: badri/spring-boot-mango        
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata: 
  name: springbootsvc
spec:
  type: NodePort
  selector: 
    app: springboot
  ports:
  - name: http
    port: 80   # Service Port using which we can access inside cluster
    targetPort: 8080 # containerPort inside pod
    nodePort: 30032
