manifestfiles/ingress-resource-1.yml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-1
spec:
  ingressClassName: nginx
  rules:
  - host: www.springapp.example.com
    http:
      paths:
      - backend:
          serviceName: springbootsvc
          servicePort: 80
  - host: www.javawebapp.example.com
    http:
      paths:
      - backend:
          serviceName: javawebappsvc
          servicePort: 80
